# mcman

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml  publish.yml  release.yml
crates/mcman/: Cargo.toml
crates/mcman-cli/: Cargo.toml
crates/mcman-cli/src/: main.rs
crates/mcman-core/: Cargo.toml
crates/mcman-core/src/: ctx.rs  hash.rs  lib.rs  location.rs
crates/mcman-core/src/hash/: format.rs  mod.rs  murmur2.rs
crates/mcman-core/src/task/: checksum_task.rs  copy_task.rs  download_task.rs  execute_task.rs  mod.rs  unzip_task.rs
crates/mcman-core/src/task/executor/: mod.rs
crates/mcman-models/: Cargo.toml
crates/mcman-models/src/: lib.rs
crates/mcman-models/src/mrpack/: mod.rs
crates/mcman-models/src/packwiz/: hashes.rs  metafile.rs  mod.rs  pack.rs
crates/mcman-models/src/unsup/: bootstrap.rs  hash_format.rs  mod.rs  root.rs  update.rs
crates/mcman-sources/: Cargo.toml
crates/mcman-sources/src/sources/: mod.rs
crates/mcman-sources/src/sources/github/: mod.rs  models.rs
crates/mcman-sources/src/sources/minecraft/: mod.rs
crates/mcman-sources/src/sources/minecraft/models/: args.rs  enums.rs  manifest.rs  mod.rs  rules.rs  version.rs
crates/mcman-sources/src/sources/modrinth/: mod.rs
crates/mcman-sources/src/sources/modrinth/models/: mod.rs  project.rs  version.rs
crates/mcman-types/: Cargo.toml
src/: main.rs
src/app/: downloading.rs  feedback.rs  from_string.rs  hashing.rs  mod.rs  resolvable.rs
src/commands/: build.rs
src/commands/init/: mod.rs
src/core/: addons.rs  bootstrap.rs  mod.rs  scripts.rs  serverjar.rs  worlds.rs
src/hot_reload/: config.rs  mod.rs
src/interop/: hooks.rs  markdown.rs  mrpack.rs  packwiz.rs  worlds.rs
src/model/: lockfile.rs  serverlauncher.rs  servertoml.rs
src/model/downloadable/: markdown.rs  meta.rs  mod.rs
src/model/servertype/: interactive.rs  mod.rs
src/sources/: curseforge.rs  curserinth.rs  fabric.rs  forge.rs  github.rs  hangar.rs  jenkins.rs  maven.rs  mclogs.rs  mod.rs  modrinth.rs  neoforge.rs  papermc.rs  purpur.rs  quilt.rs  spigot.rs  vanilla.rs
src/util/: mod.rs
