[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
repository = "https://github.com/deniz-blue/mcman"
homepage = "https://mcman.deniz.blue"
version = "0.5.0"
rust-version = "1.90.0"
authors = [
    "deniz.blue <deniz@deniz.blue>",
]

[workspace.dependencies]
dirs = "6.0.0"
http-cache-reqwest = "1.0.0-alpha.2"
reqwest = { version = "0.12.24", features = [
    "json",
    "stream",
    "cookies",
    "gzip",
    "deflate",
    "brotli",
    "zstd",
    "rustls-tls",
] }
reqwest-middleware = "0.4.2"
serde = "1.0.228"
serde_json = "1.0.145"
toml = "0.9.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
miette = "7.6.0"
