[package]
name = "mcman-cli"
edition = "2024"
repository.workspace = true
homepage.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
mcman-core = { version = "0.5.0", path = "../mcman-core" }
mcman-sources = { version = "0.5.0", path = "../mcman-sources" }
mcman-types = { version = "0.5.0", path = "../mcman-types" }
tokio = { workspace = true }
miette = { workspace = true }
