[package]
name = "mcman-core"
edition = "2024"
repository.workspace = true
homepage.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.100"
cacache = "13.1.0"
dirs = "6.0.0"
http-cache-reqwest = "0.16.0"
reqwest = { version = "0.12.24", features = [
    "json",
    "stream",
    "cookies",
    "gzip",
    "deflate",
    "brotli",
    "zstd",
    "rustls-tls",
] }
reqwest-middleware = "0.4.2"
serde = "1.0.228"
serde_json = "1.0.145"
serde_toml = "0.0.1"
tokio = "1.48.0"
