[package]
name = "mcman-core"
edition = "2024"
repository.workspace = true
homepage.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_toml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
http-cache-reqwest = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
dirs = { workspace = true }
serde-roxmltree = "0.10.0"
