[package]
name = "mcman-models"
edition = "2024"
repository.workspace = true
homepage.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
mcman-core = { version = "0.5.0", path = "../mcman-core" }
serde.workspace = true
serde_json.workspace = true
