[package]
name = "mcman-sources"
edition = "2024"
repository.workspace = true
homepage.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
mcman-core = { version = "0.5.0", path = "../mcman-core" }
mcman-types = { version = "0.5.0", path = "../mcman-types" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_toml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
